--- a/css/hovered.css
+++ b/css/hovered.css
@@ -5,90 +5,78 @@ html {
 	*:after {
     box-sizing: inherit;
 	}
-	#wrapper{
-		background-image: url("pointer-bg.png");
-		background-color: #CCCCCC;
-		margin: 0;
-		padding: 0;
-		position: absolute;
-	}
 
 	#gamewrapper {
- 	    position: absolute;
-		background-color: black;
+ 	    font-family: caveat;
+		position: absolute;
 		top: 25px;
-		width: 950px;
-		min-width: 950px;
-		height: 900px;
-		padding: 20px;
+		left: 10%;
+		width: 80%;
+		height: 80%;
+		min-width: 500px;
+		min-height: 500px;
 		margin: auto;
 		position: absolute;
-		left: 100px;
 		z-index: 1000;
+		border-radius: 5px;
 	}
 
-	
 	#gameboard {	
-		width: 750px;
-		height: 750px;
-		background-color: gray;
+		width: 100%;
+		height: 80%;
 		position: absolute;
-		top: 110px;
+		top: 20%;
+		margin-top: 10px;
+		left: 0px;
+		border-radius: 5px;
+		background-color:cornsilk;
+	}
+
+	#hoveredMenu {
+		width: 100%;
+		height: 20%;
+		background-color: rgb(85, 84, 84);
+		display: flex;
 		margin: 0px;
-
-	}
-	
-	#infoscreen {
-		width: 500px;
-		height: 500px;
-		position: relative;
-		top: 125px;
-		left: 125px;
-		background-color: white;
-		text-align: center;
-	}
-
-	#levelinfo {
-		padding: 25px;
-	}
-	
+		left: 0px;
+		border-radius: 5px;
+	}	
 	#button1, #button2{
-		width: 120px;
-		height: 50px;
+		width: 40%;
+		height: 100%;
+		font-size: 300%;
 		position: relative;
-		top: 300px;
+		border-radius: 5px;	
 	}
 	
 	#button2 {
 		display: none;
 	}
 	
-	#hoveredMenu {
-		width: 155px;
-		height: 750px;
-		padding: 10px;
-		background-color: black;
-		position: absolute;
-		top: 110px;
-		left: 780px;
-		margin: 0px;
-	}
-
 	#hoveredMenu p {
 		color: white;
 	}
 	
-	
 	#score, #timer {
-		width: 100%;
+		width: 20%;
+		height: 15%;
 		font-size: 300%;
 		padding: 1px;
-		margin: 0px;
+		margin: 2%;
 		text-align: center;
 		}
-	
-	h1 {
-		text-align: center;
-		color: white;
+
+	#hMenuInstruct{
+		width: 100%;
+		height: 5%;
+		top:80%;
+	}
 		
+	h1 {
+		font-size: 300%;
+		text-align: left;
+		color: white;
+		margin:1%;
+		width: 40%;
+		height: 15%;
 	}
