--- a/css/hovered.css
+++ b/css/hovered.css
@@ -36,16 +36,28 @@ html {
 		width: 100%;
 		height: 20%;
 		background-color: rgb(85, 84, 84);
-		display: flex;
+		position: absolute;
+		display: block;
 		margin: 0px;
 		left: 0px;
 		border-radius: 5px;
 	}	
+	
+	#divMenuUpper{
+		position: absolute;
+		display: flex;
+		width: 80%;
+		height: 60%;
+
+	}
+
 	#button1, #button2{
-		width: 40%;
+		width: 20%;
 		height: 100%;
+		right: 0%;
 		font-size: 300%;
-		position: relative;
+		display: block;
+		position: absolute;
 		border-radius: 5px;	
 	}
 	
@@ -60,16 +72,21 @@ html {
 	#score, #timer {
 		width: 20%;
 		height: 15%;
-		font-size: 300%;
+		font-size: 400%;
 		padding: 1px;
 		margin: 2%;
 		text-align: center;
 		}
 
-	#hMenuInstruct{
-		width: 100%;
-		height: 5%;
-		top:80%;
+	#pInstruct{
+		display: block;
+		position: absolute;
+		width: 80%;
+		top:60%;
+		font-size: 200%;
+		margin: 0px;
+		padding-left: 10px;
+
 	}
 		
 	h1 {
@@ -78,5 +95,6 @@ html {
 		color: white;
 		margin:1%;
 		width: 40%;
-		height: 15%;
+		padding-top: 10px;
+		padding-left: 10px;
 	}
