--- a/css/hovered.css
+++ b/css/hovered.css
@@ -15,6 +15,7 @@ html {
 		height: 80%;
 		min-width: 500px;
 		min-height: 500px;
+		max-width: 700px;
 		margin: auto;
 		position: absolute;
 		z-index: 1000;
