--- a/css/hovered.css
+++ b/css/hovered.css
@@ -22,6 +22,20 @@ html {
 		border-radius: 5px;
 	}
 
+	#taskTitle {
+		position: absolute;
+		top: 20%;
+		left: 0px;
+		margin-top: 10px;
+		font-size: 2.5rem;
+		padding-left: 10px;
+		padding-top: 10px;
+		text-align: left;	
+		z-index: 1001;
+
+	
+	}
+
 	#gameboard {	
 		width: 100%;
 		height: 80%;
@@ -30,7 +44,11 @@ html {
 		margin-top: 10px;
 		left: 0px;
 		border-radius: 5px;
-		background-color:cornsilk;
+		background-color:#F7EC75;
+		padding: 10px;
+		padding-top: 60px;
+		text-align: left;
+		font-size: 2rem;
 	}
 
 	#hoveredMenu {
@@ -56,7 +74,7 @@ html {
 		width: 20%;
 		height: 100%;
 		right: 0%;
-		font-size: 300%;
+		font-size: 2.5rem;
 		display: block;
 		position: absolute;
 		border-radius: 5px;	
@@ -81,7 +99,7 @@ html {
 		position: absolute;
 		width: 80%;
 		top:60%;
-		font-size: 200%;
+		font-size: 1.75rem;
 		margin: 0px;
 		padding-left: 10px;
 
